tests/reference/asr-test_str_slicing2-b542789.stderr
semantic error: slice indices must be integers or None
 --> tests/errors/test_str_slicing2.py:4:13
  |
4 |     print(s[1.5:3])
  |             ^^^ 
